# byk

./: .byk.json  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  byk.json  netlify.toml  plugin-protocol.md  pyproject.toml  test.byk.json
.byk/: curl.byk.json  dev.byk.json  git.byk.json  release.byk.json  test.byk.json
.github/workflows/: build-wheels.yml  build.yml  test.yml
docs/: package.json  rspress.config.ts  tsconfig.json
docs/content/: _meta.json  _nav.json  commands.mdx  index.mdx  plugin-registry.mdx  plugins.mdx
docs/content/alias/: config.mdx  start.mdx
docs/content/cli/: commands.mdx  plugin-registry.mdx  plugins.mdx
docs/content/cli/alias/: _meta.json  placeholders.mdx
docs/content/plugins/: _meta.json
docs/content/plugins/pysdk/: _meta.json  context.mdx  index.mdx  utils.mdx
docs/content/sdk/: _meta.json  index.mdx
docs/content/sdk/python/: _meta.json  cli.mdx  context.mdx  index.mdx  network.mdx  store.mdx  web.mdx
docs/theme/: env.d.ts  index.css  index.tsx
docs/theme/components/: Home.tsx  home.css
extensions/vscode/: .gitignore  .vscodeignore  LICENSE  README.md  package.json  package.nls.json  package.nls.zh-cn.json  pnpm-lock.yaml  tsconfig.json
extensions/vscode/schemas/: byk-alias.json  byk-plugin.json
extensions/vscode/scripts/: download-assets.mjs  download-binary.mjs
extensions/vscode/src/: extension.ts
plugins/: bulid.byk.json
plugins/pip-bin/: byk.json  bykpb.py  pyproject.toml
plugins/py-bin/: byk.json  pyproject.toml
plugins/py-bin/bykpyb/: main.py
plugins/py-module/: byk.json  pyproject.toml
plugins/py-module/bykpym/: one.py  two.py
plugins/py-script/: byk.json
plugins/python/: byk.json  pyproject.toml
plugins/python-m/: byk.json  bykpym.py  pyproject.toml
plugins/python/hello/: one.py  two.py
plugins/scripts/: byk.json  hello_world.py
scripts/: install.ps1  install.sh  uninstall.sh
sdks/: byksdk.py  utils.py
sdks/python/: .byk.json  README.md  pyproject.toml
sdks/python/src/byksdk/: __init__.py  _internal.py  cli.py  logging.py  network.py  paths.py  plugin.py  state.py  web.py
sdks/python/tests/: conftest.py  test_internal.py  test_network.py  test_paths.py  test_plugin.py  test_state.py
src/: cli.rs  main.rs
src/core/: add.rs  completion.rs  info.rs  init.rs  install.rs  mod.rs  node.rs  npm_commands.rs  paths.rs  plugins.rs  remove.rs  rm.rs  show.rs  version_check.rs
src/core/aliases/: cache.rs  exact.rs  execution.rs  merge.rs  mod.rs  parse.rs  placeholder.rs  scan.rs  types.rs
src/core/plugins/: execute.rs  install.rs  mod.rs  protocol.rs  state.rs  types.rs
src/render/: add.rs  aliases.rs  banner.rs  dashboard.rs  help.rs  info.rs  mod.rs  npm.rs  plugins.rs  remove.rs  show.rs
src/templates/: npm.byk.json  pnpm.byk.json
src/utils/: display.rs  json_io.rs  mod.rs  shell.rs
tests/e2e/: conftest.py  test_smoke.py
