[package]
name = "byk"
version = "0.1.0"
edition = "2024"
description = "A lightweight, extensible collection of CLI utilities"
license = "MIT"
exclude = ["docs", ".github", ".vscode", "example", "plugin", "dist", "netlify.toml"]
documentation = "https://cli.fcbyk.com"
repository = "https://github.com/fcbyk/byk"
authors = ["fcbyk <731240932@qq.com>"]

[package.metadata.maturin]
bindings = "bin"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
colored = "2"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
terminal_size = "0.4"
unicode-width = "0.2"
ureq = "3"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
chrono = "0.4"

[[bin]]
name = "byk"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true